// Vitest Snapshot v1

exports[`remark-astrojs-image-auto-import > [test #0] alt 1`] = `
/*@jsxRuntime automatic @jsxImportSource react*/
/*IGNORED (only Image components processed)*/
/*IGNORED (only Image components processed)*/
/*IGNORED (src is not a string)*/
/*IGNORED (src is not a string)*/
/*TRANSFORMED*/
/*TRANSFORMED*/
/*TRANSFORMED*/
/*TRANSFORMED*/
/*TRANSFORMED*/
import { Image } from "@astrojs/image/components";
import image from "./image.png";
function _createMdxContent(props) {
  const _components = Object.assign(
    {
      p: "p",
      img: "img",
    },
    props.components,
  );
  return (
    <>
      {}
      {"\\n"}
      <_components.p>
        <_components.img src="image.png" alt="Alt text" />
      </_components.p>
      {"\\n"}
      {}
      {"\\n"}
      <img src={image} />
      {"\\n"}
      {}
      {"\\n"}
      <Image src={image} />
      {"\\n"}
      {}
      {"\\n"}
      <Image src={import("./image.png")} />
      {"\\n"}
      {}
      {"\\n"}
      <Image
        src={import(
          "<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/alt/image.png"
        )}
      />
      {"\\n"}
      {}
      {"\\n"}
      <Image
        src={import(
          "<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/alt/image.png"
        )}
      />
      {"\\n"}
      {}
      {"\\n"}
      <Image
        width={300}
        src={import(
          "<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/alt/image.png"
        )}
      />
      {"\\n"}
      {}
      {"\\n"}
      <Image
        width={300}
        height={600}
        src={import(
          "<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/alt/image.png"
        )}
      />
      {"\\n"}
      {}
      {"\\n"}
      <Image
        aspectRatio="16:9"
        format="avif"
        src={import(
          "<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/alt/image.png"
        )}
      />
    </>
  );
}
function MDXContent(props = {}) {
  const { wrapper: MDXLayout } = props.components || {};
  return MDXLayout ? (
    <MDXLayout {...props}>
      <_createMdxContent {...props} />
    </MDXLayout>
  ) : (
    _createMdxContent(props)
  );
}
export default MDXContent;

`;

exports[`remark-astrojs-image-auto-import > [test #1] basic 1`] = `
/*@jsxRuntime automatic @jsxImportSource react*/
import { Image } from "@astrojs/image/components";
function _createMdxContent(props) {
  return (
    <Image
      src={import(
        "<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/basic/image.png"
      )}
    />
  );
}
function MDXContent(props = {}) {
  const { wrapper: MDXLayout } = props.components || {};
  return MDXLayout ? (
    <MDXLayout {...props}>
      <_createMdxContent {...props} />
    </MDXLayout>
  ) : (
    _createMdxContent(props)
  );
}
export default MDXContent;

`;

exports[`remark-astrojs-image-auto-import > [test #2] data-import-ignore 1`] = `
/*@jsxRuntime automatic @jsxImportSource react*/
import { Image } from "@astrojs/image/components";
function _createMdxContent(props) {
  return <Image data-import-ignore src="./image.png" />;
}
function MDXContent(props = {}) {
  const { wrapper: MDXLayout } = props.components || {};
  return MDXLayout ? (
    <MDXLayout {...props}>
      <_createMdxContent {...props} />
    </MDXLayout>
  ) : (
    _createMdxContent(props)
  );
}
export default MDXContent;

`;

exports[`remark-astrojs-image-auto-import > [test #3] error-imagenotfound 1`] = `"<repo-root>/packages/remark-astrojs-image-auto-import/tests/__fixtures__/error-imagenotfound/non-existent.png could not be found on disk and the \\"ignoreFileNotFound\\" option is false"`;
